# ranol-bot

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
bot-any/: Cargo.toml
bot-any-telegram/: Cargo.toml
bot-any-telegram/src/: lib.rs
bot-any-telegram/src/api/: client.rs  mod.rs  polling.rs
bot-any-telegram/src/bridge/: mod.rs  telegram_client_request.rs
bot-any/src/message/: message_write.rs  mod.rs
bot-any/src/message/entity/: mod.rs  styled_text.rs
reqores-server-axum/: Cargo.toml
reqores-server-axum/src/: server_response.rs
src/: main.rs
src/commands/: mod.rs  ping.rs
