[package]
name = "ranol-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.3"
miette = { version = "5.3.0", features = ["fancy"] }
tokio = { version = "1.21.1", features = ["full"] }
async-stream = "0.3.3"

kal = { version = "0.5.0", features = ["lex"] }

bot-any = { path = "./bot-any" }
bot-any-telegram = { path = "./bot-any-telegram" }

reqores = "0.1.7"
reqores-client-surf = { version = "0.1.3", default-features = false, features = ["h1-client-rustls", "encoding"] }
axum = "0.5.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-unwrap = "0.9.2"
futures-core = "0.3.25"
futures-lite = "1.12.0"
