[package]
name = "bot-any-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apid = "0.2"
apid-telegram-bot = "0.2.3"

serde = "1"
serde_json = "1"
reqores = "0.1"

bot-any = { path = "../bot-any" }
futures-lite = "1"
